--- a/templates/home.html
+++ b/templates/home.html
@@ -7,14 +7,14 @@
         padding: 0;
         font-family: 'poppins', sans-serif;
     }
-    
+
     body {
         display: flex;
         justify-content: center;
         align-items: center;
         min-height: 100vh;
         width: 100%;
-        background: url('background6.jpg') no-repeat;
+        background: url('https://raw.githubusercontent.com/darrenkoo1/aws-live1/main/templates/background6.jpg') no-repeat;
         background-position: center;
         background-size: cover;
     }
@@ -176,17 +176,17 @@
             <h1>Welcome to MKW Employee Management System</h1>
         </div>
         <div class="button-container2">
-            <a href="/addemp/">
+            <a href="/addemp">
                 <button class=" form-button">Add Employee</button>
             </a>
         </div>
         <div class="button-container2">
-            <a href="/getemp/">
+            <a href="/getemp">
                 <button class=" form-button">Retrieve Employee</button>
             </a>
         </div>
         <div class="button-container2">
-            <a href="/deleteemp/">
+            <a href="/deleteemp">
                 <button class=" form-button">Delete Employee</button>
             </a>
         </div>
