--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
     * {
         margin: 0;
         padding: 0;
@@ -18,7 +20,7 @@
         background-position: center;
         background-size: cover;
     }
-    
+
     .navi {
         position: absolute;
         top: 0;
@@ -30,14 +32,14 @@
         background-color: rgba(0, 0, 0, 0.7);
         border-radius: 5px;
     }
-    
+
     .navi2 a {
         text-decoration: none;
         color: #fff;
         margin-right: 20px;
         font-size: 18px;
     }
-    
+
     h2.title2 {
         position: absolute;
         top: 50%;
@@ -47,7 +49,7 @@
         margin-bottom: 20px;
         font-size: 2em;
     }
-    
+
     .form-container {
         position: relative;
         width: 400px;
@@ -61,7 +63,7 @@
         flex-direction: column;
         padding: 20px;
     }
-    
+
     .form-bubble-container {
         display: flex;
         justify-content: center;
@@ -69,13 +71,13 @@
         flex-direction: column;
         margin: 10px 0;
     }
-    
+
     label {
         color: #fff;
         font-size: 16px;
         margin-bottom: 5px;
     }
-    
+
     input {
         width: 100%;
         padding: 8px;
@@ -87,7 +89,7 @@
         margin-bottom: 10px;
         border-radius: 5px;
     }
-    
+
     .form-button1 {
         width: 100%;
         height: 40px;
@@ -111,14 +113,14 @@
             padding: 0;
             font-family: 'poppins', sans-serif;
         }
-        
+
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
             width: 100%;
-            background: url('background6.jpg') no-repeat;
+            background: url('https://raw.githubusercontent.com/darrenkoo1/aws-live1/main/templates/background6.jpg') no-repeat;
             background-position: center;
             background-size: cover;
         }
@@ -149,7 +151,7 @@
         }
         
         .form-button {
-            width: 100%;
+            width: 120%;
             height: 40px;
             border-radius: 40px;
             background: #fff;
