--- a/templates/DeleteEmp.html
+++ b/templates/DeleteEmp.html
@@ -129,8 +129,8 @@
     <h2 class="title2">Delete Employee</h2>
 
     <div class="form-container form-container-get">
-        <h3 class="title3" style="text-align: center;">Enter Employee ID to Retrieve Employee</h2>
-            <form action="/deleteemp" autocomplete="on" method="POST" class="form-bubble">
+        <h3 class="title3" style="text-align: center;">Enter Employee ID to Delete Employee</h2>
+            <form action="/deleteemp/output" autocomplete="on" method="POST" class="form-bubble">
                 <div class="form-bubble-container">
                     <label>Employee ID</label>
                     <input type="number" name="emp_id" autofocus size="40">
