--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -131,7 +131,7 @@
 
     <div class="form-container form-container-get">
         <h3 class="title3" style="text-align: center;">Enter Employee ID to Retrieve Employee</h2>
-            <form action="/getemp" autocomplete="on" method="POST" class="form-bubble">
+            <form action="/getemp/output" autocomplete="on" method="POST" class="form-bubble">
                 <div class="form-bubble-container">
                     <label>Employee ID</label>
                     <input type="number" name="emp_id" autofocus size="40">
