--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -1,92 +1,123 @@
 <!DOCTYPE html>
 <html>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-    * {
-        margin: 0;
-        padding: 0;
-        font-family: 'poppins', sans-serif;
-    }
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,500&display=swap');
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "poppins", sans-serif;
+            color: white;
+        }
 
-    body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        width: 100%;
-        background: url('https://raw.githubusercontent.com/darrenkoo1/aws-live1/main/templates/background6.jpg') no-repeat;
-        background-position: center;
-        background-size: cover;
-    }
-    
-    .navi {
+        body {
+            height: 100vh;
+            width: 100%;;
+        }
+
+        .header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            padding: 25px 13%;
+            background: transparent;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            z-index: 100;
+        }
+
+        .navbar a {
+            position: relative;
+            font-size: 16px;
+            color: #fff;
+            margin-right: 30px;
+            text-decoration: none;
+        }
+
+        .background {
+            background: url(background3.jpg) no-repeat;
+            background-position: center;
+            background-size: cover;
+            height: 100vh;
+            width: 100%;
+            filter: blur(10px);
+        }
+
+        .form-container {
         position: absolute;
-        top: 0;
-        left: 0;
-        display: flex;
-        list-style: none;
-        margin: 20px;
-        padding: 10px;
-        background-color: rgba(0, 0, 0, 0.7);
-        border-radius: 5px;
-    }
-    
-    .navi2 a {
-        text-decoration: none;
-        color: #fff;
-        margin-right: 20px;
-        font-size: 18px;
-    }
-    
-    .form-container {
-        position: relative;
-        width: 400px;
-        background: transparent;
-        border: 2px solid rgba(255, 255, 255, 0.5);
-        border-radius: 20px;
-        backdrop-filter: blur(15px);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        padding: 20px;
-    }
-    
-    .form-bubble {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        margin: 10px 0;
-    }
-    
-    h1,
-    h2,
-    h3 {
-        color: #fff;
-        text-align: center;
-        margin-bottom: 10px;
-    }
-    
-    .button-container {
-        display: flex;
-        justify-content: center;
-    }
-    
-    .form-button {
-        width: 130%;
-        height: 40px;
-        border-radius: 40px;
-        background: #fff;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        font-size: 1em;
-        font-weight: 600;
-        text-align: center;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        width: 40%;
+        height: 360px;
         margin-top: 20px;
-    }
-</style>
+        background: url(background3.jpg) no-repeat;
+        background-position: center;
+        background-size:cover ;
+        border-radius: 20px;
+        overflow: hidden;
+        
+
+        }
+
+        .form-bubble {
+            border-radius: 1rem;
+            padding: 2rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .form-bubble-container {
+            margin-bottom: 2rem;
+        }
+
+        .form-bubble-container label {
+            display: block;
+            margin-bottom: 0.5rem;
+        }
+
+        .form-bubble-container input {
+            padding: 0.5rem;
+            font-size: 1rem;
+            width: 100%;
+        }
+
+        .custom-file-input {
+            cursor: pointer;
+        }
+
+        .form-button1 {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 1rem 2rem;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 1rem;
+            margin: 1rem 2px;
+            cursor: pointer;
+            border-radius: 1rem;
+        }
+
+        h2{
+            text-align: center;
+            font-size: 20px;
+        }
+
+        h3{
+            text-align: center;
+            font-style: bold;
+            color: white;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+        input{
+            color: black;
+        }
+    </style>
 
 <head>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/AddEmp.css') }}">
@@ -94,25 +125,32 @@
 
 </head>
 
-<body class="bckimg">
+<body>
 
-    <ul class="navi">
-        <li class="navi2"><a href="/">Home</a></li>
-        <li class="navi2"><a href="/addemp">Add</a></li>
-        <li class="navi2"><a href="/deleteemp">Delete</a></li>
-        <li class="navi2"><a href="/getemp">Retrieve</a></li>
-    </ul>
+    <header class="header">
+        <nav class="navbar">
+            <a href="/">Home</a>
+            <a href="/addemp">Add</a>
+              <a href="/deleteemp">Delete</a>
+              <a href="/getemp">Retrieve</a>
+        </nav>
+        </header>
+
+        <div class="background"></div>
 
     <div class="form-container form-container-add">
         <div class="form-bubble body-container">
             <h1>Employee Added Successfully</h1>
+            <br>
             <h2>Following Employee has been added to the database</h2>
+            <br>
             <h3>{{ name }}</h3>
-        </div>
-        <div class="button-container">
-            <a href="/">
-                <button class="form-button">GO BACK</button>
-            </a>
+            <br>
+                <a href="/">
+                    <button class="form-button1">GO BACK</button>
+                </a>
+
+
         </div>
     </div>
 </body>
