--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -37,7 +37,7 @@
         }
 
         .background {
-            background: url(background3.jpg) no-repeat;
+            background: url('https://raw.githubusercontent.com/darrenkoo1/aws-live1/main/templates/background3.jpg') no-repeat;
             background-position: center;
             background-size: cover;
             height: 180vh;
