--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
     }
 
     .background {
-        background: url('https://github.com/darrenkoo1/aws-live1/blob/700a2d49c890292ea25cd1e65f4bccf14e845a4f/templates/background3.jpg') no-repeat;
+        background: url(background3.jpg) no-repeat;
         background-position: center;
         background-size: cover;
         height: 100vh;
