--- a/templates/DeleteEmpOutput.html
+++ b/templates/DeleteEmpOutput.html
@@ -53,7 +53,7 @@
             width: 40%;
             height: 280px;
             margin-top: 20px;
-            background: url('https://github.com/darrenkoo1/aws-live1/blob/700a2d49c890292ea25cd1e65f4bccf14e845a4f/templates/background3.jpg') no-repeat;
+            background: url(background3.jpg) no-repeat;
             background-position: center;
             background-size: cover;
             border-radius: 20px;
